style: fix layout and spacing for quiz components

--- a/asset/css/style_quiz-jeu.css
+++ b/asset/css/style_quiz-jeu.css
@@ -3,23 +3,34 @@
 }
 
 .main-james {
-    min-height: 61.4vh;
+    min-height: 75.4vh;
+    align-content: center;
+    
+    margin: 0 auto;
+    /* 
+    margin-bottom: 2rem; */
+    gap: 4rem;
+}
+
+.quiz-content-box {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    margin-top: 4rem;
-    margin-bottom: 4rem;
     gap: 2rem;
+    margin-bottom: 2.5rem;
 }
 
 .quiz-title,
 .text-pink {
+    text-align: center;
     color: #E91D63;
 }
 
 .separator {
     width: 50%;
+    margin: 0 auto;
     height: 4px;
     background-color: #c4c4c4;
     border: none;
@@ -59,12 +70,13 @@
 .question-box {
     /* background-color: aqua; */
     width: 60%;
+    margin: 0 auto;
     padding: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 4rem;
+    gap: 3rem;
 }
 
 .question-box-title {
